--- a/estilo.css
+++ b/estilo.css
@@ -78,7 +78,7 @@ main {
     padding-top: 32px;
 }
 
-.sobre h2{
+.sobre h2, .grid h2{
     font-size: 48px;
     margin-bottom: 32px;
 }
@@ -97,4 +97,70 @@ main {
     flex-direction: column;
     justify-content: end;
     gap: 8px;
+}
+
+.grid{
+    padding: 64px 0;
+}
+
+.grid > div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, 140px);
+    gap: 32px 24px;
+}
+
+.grid__item{
+    display: flex;
+}
+
+.grid__item p:first-of-type{
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 12px;
+}
+
+.grid__item:nth-child(1){
+    flex-direction: column;
+    grid-row: 1 / 4;
+    grid-column: 1 / 2;
+}
+
+.grid__item img {
+    border-radius: 16px;
+    margin-right: 12px;
+}
+
+.grid__item:nth-child(1) img{
+    margin-bottom: 12px;
+    margin-right: 0px;
+}
+
+.contato{
+    background: #e9bdde;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 64px;
+    gap: 32px;
+}
+
+.contato h3{
+    font-size: 32px;
+}
+
+.contato p{
+    font-size: 18px;
+}
+
+.contato form input{
+    border: none;
+    border-radius: 8px;
+    padding: 8px 12px;
+    font-size: 18px;
+}
+
+.contato form input[type="submite"]{
+    background: #ffffff;
+    font-weight: bold;
 }
