--- a/estilo.css
+++ b/estilo.css
@@ -164,3 +164,9 @@ main {
     background: #ffffff;
     font-weight: bold;
 }
+
+footer{
+    text-align: center;
+    padding: 16px;
+    background: #e9bdde;
+}
