--- a/estilo.css
+++ b/estilo.css
@@ -62,7 +62,6 @@ main {
 }
 
 .home__imagem {
-    border: 1px solid red;
     width: 100%;
     aspect-ratio: 16/9;    
 }
@@ -84,19 +83,21 @@ main {
 }
 
 .sobre > div{
-    display: flex;
-    gap: 16px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 10px;
 }
 
 .sobre__card{
     background: rgb(233, 154, 209);
     border-radius: 16px;
     padding: 16px;
-    aspect-ratio: 1/1;
     display: flex;
     flex-direction: column;
     justify-content: end;
     gap: 8px;
+    flex-grow: 1;
 }
 
 .grid{
