--- a/estilo.css
+++ b/estilo.css
@@ -139,6 +139,7 @@ main {
 
 .contato{
     background: #e9bdde;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
